tests/sema/fail/v3_fail_void_return_expr.ep
# COMPILE_FAIL_CONTAINS: return expected void, got i64

fun main(): void {
    ret 1
}
